# triageiq

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  eval.yml
backend/: agents.py  orchestrator.py  tools.py
eval/: README.md  RUBRIC.md  __init__.py  instrumentation.py  orchestrator.py  prompts.py  rubric_audit.py  runners.py  schemas.py  scorers.py
eval/reports/: latest_run.json  run_20260616_135606.md  run_20260616_152220.md
eval/scenarios/: adversarial_001.json  adversarial_002.json  adversarial_003.json  adversarial_004.json  adversarial_005.json  adversarial_006.json  ambiguous_001.json  ambiguous_002.json  ambiguous_003.json  ambiguous_004.json  ambiguous_005.json  ambiguous_006.json  clear_esi_1_2_001.json  clear_esi_1_2_002.json  clear_esi_1_2_003.json  clear_esi_1_2_004.json  clear_esi_1_2_005.json  clear_esi_1_2_006.json  clear_esi_1_2_007.json  clear_esi_4_5_001.json  clear_esi_4_5_002.json  clear_esi_4_5_003.json  clear_esi_4_5_004.json  clear_esi_4_5_005.json  clear_esi_4_5_006.json  critical_miss_test_001.json  critical_miss_test_002.json  critical_miss_test_003.json  critical_miss_test_004.json  critical_miss_test_005.json
frontend/: .env.example
tests/: test_orchestrator.py  test_runners.py  test_scenarios.py  test_scorers.py  test_smoke.py
